<resources>
    <string name="app_name">OnClick.Travel</string>
    <string name="main">MAIN</string>
    <string name="flights">FLIGHTS</string>
    <string name="accommodations">ACCOMMODATIONS</string>
    <string name="trains">TRAINS</string>
    <string name="cars">CARS</string>>
    <string name="allinones">ALL-IN-ONES</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.</string>
    <string name="title_activity_menu">MENU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">SEARCH</string>

    <string name="all_flights">ALL</string>
    <string name="best_flights">BEST</string>
    <string name="fastest_flights">FASTEST</string>
    <string name="flights_filters">filters</string>
    <string name="flights_sorting">sorting</string>
    <string name="flights_favorites">favorites</string>
    <string name="flights_charts">charts</string>

    <string name="result_text">Moscow - New York date#passengers#profile</string>


</resources>
