<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <!--<HEADER>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:background="@color/colorHeader">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="123.08"
            android:text="@string/result_text"
            android:textSize="10sp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:textSize="9sp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:textColor="#FFF"
            android:text="@string/title_activity_menu" />
    </LinearLayout>
    <!--<END_HEADER>-->


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <!--<BODY>-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/footer">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/buttons">

                <Button
                    android:id="@+id/button6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/all_flights"
                    android:textSize="@dimen/filters"/>

                <Button
                    android:id="@+id/button5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/best_flights"
                    android:textSize="@dimen/filters"/>

                <Button
                    android:id="@+id/button4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/fastest_flights"
                    android:textSize="@dimen/filters"/>

            </LinearLayout>

                <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:background="@drawable/image_button"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

                <ListView
                    android:id="@+id/flights_search_results"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="5dp"
                     />
            </LinearLayout>
        </ScrollView>
        <!--<END_BODY>-->

        <!--<FOOTER>-->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/colorButtonBackground">

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_filters"
                android:textSize="@dimen/footer"/>

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_sorting"
                android:textSize="@dimen/footer"/>

            <Button
                android:id="@+id/button10"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_favorites"
                android:textSize="@dimen/footer"/>

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_charts"
                android:textSize="@dimen/footer"/>

        </LinearLayout>
        <!--<END_FOOTER>-->

    </RelativeLayout>

</LinearLayout>